# concord

./: .buildinfo  .cee-contributor  .cee-repo  .clang-format  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CNAME  CODING_GUIDELINES.md  DISCORD__ROADMAP_8md.html  Doxyfile  KNOWN_BUGS.md  LICENSE  Makefile  Makefile.dynamic  README.md  README_8md.html  ROADMAP.md  SECURITY.md  WINDOWS_8md.html  annotated.html  annotated_dup.js  anomap_8h.html  anomap_8h.js  anomap_8h__incl.map  anomap_8h__incl.md5  anomap_8h_source.html  application_8h.html  application_8h.js  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  application__command_8h.html  application__command_8h.js  application__command_8h__dep__incl.map  application__command_8h__dep__incl.md5  application__command_8h_source.html  application__commands_8h.html  application__commands_8h.js  (+2235 more)
.github/: PULL_REQUEST_TEMPLATE.md
_sources/: discord-api.rst.txt  discord_api.rst.txt  index.rst.txt  websockets_api.rst.txt
_static/: custom.css
apis/: discord.html  index.html
bots/: bot-audit-log.c  bot-ban.c  bot-bash.cpp  bot-change-nick.c  bot-change-nick.cpp  bot-channel.c  bot-components.c  bot-components.json  bot-create-channel.c  bot-create-channel.cpp  bot-create-role.c  bot-create-role.cpp  bot-delete-messages.c  bot-delete-reaction.c  bot-echo-reaction.cpp  bot-echo.c  bot-echo.cpp  bot-echo.mk  bot-eddbapi.cpp  bot-elitebgs.c  bot-elitebgs.cpp  bot-embed-formatting.c  bot-embed.c  bot-embed.cpp  bot-embed.json  bot-emoji.c  bot-fetch-messages.c  bot-fetch-messages.cpp  bot-github-gist.c  bot-github-repository.c  bot-github-user.c  bot-github.c  bot-guild.c  bot-invite.c  bot-log.c  bot-log.cpp  bot-manual-dm.c  bot-mimic.cpp  bot-modify-member.c  bot-pin.c  (+21 more)
bots-1/: README.md
bots-2/: README.md
cee/: .stensal_project_configurations  .stensal_project_settings  DESIGN.html  DESIGN.md  README.html  README.md  block.c  box.c  cee-common.c  cee-header.h  cee-resize.h  cee.h  closure.c  dict.c  makefile  map.c  n_tuple.c  quadruple.c  set.c  singleton.c  stack.c  str.c  tagged.c  tester.c  triple.c  tuple.c  vect.c
cee-cc/: DESIGN.md  README.md  block.cc  box.cc  cee-internal.h  cee.h  dict.cc  makefile  map.cc  n_tuple.cc  quadruple.cc  set.cc  singleton.cc  stack.cc  str.cc  tagged.cc  tester.cc  triple.cc  tuple.cc  vect.cc
cee-ns/: README.md  block.cc  cee-common.cc  cee-header.h  cee-resize.h  closure.cc  map.cc  n_tuple.cc  set.cc  stack.cc  tagged.cc  tuple.cc  vect.cc
cee-utils/: Makefile  README.md  cee-data-sizes.h  cee-utils.c  cee-utils.h  debug.h  json-actor-boxed.c  json-actor-boxed.h  json-actor.c  json-actor.h  json-parser.c  json-printf.c  json-scanf.c  json-scanf.h  json-string.c  json-struct.c  log.c  log.h  logconf.c  logconf.h  ntl.c  ntl.h  orka-utils.c  orka-utils.h
cog-utils/: .gitignore  chash.h  cog-utils.c  cog-utils.h  jsmn-find.h  logconf.c  logconf.h
cog-utils2/: cog-utils.c  cog-utils.h  debug.h  logconf.c  logconf.h
common/: actor-gen.json  common.c  common.h  curl-websocket-utils.c  curl-websocket.c  curl-websocket.h  debug.h  http-common.c  http-common.h  index.html  io_poller.c  io_poller.h  jqbs.c  js-addons.c  js-addons.h  js_sqlite3.c  js_sqlite3.h  js_user-agent.c  js_user-agent.h  jso.c  jso.h  json-actor-boxed.c  json-actor-boxed.h  json-actor.c  json-actor.h  json-parser.c  json-printf.c  json-scanf.c  json-scanf.h  json-struct.c  logconf.c  logconf.h  mujs-addons.c  ntl.c  ntl.h  open-api.c  orka-config.c  orka-config.h  orka-debug.h  orka-utils.c  (+15 more)
common/tmp/: CMakeLists.txt  http_client.c
core/: Makefile  anomap.c  anomap.h  attributes.h  carray.h  chash.h  clock.h  cog-utils.c  cog-utils.h  common.c  common.h  concord-error.c  concord-error.h  concord-notifier.c  concord-notifier.h  concord-once.c  concord-once.h  cthreads.c  cthreads.h  curl-forwarding.h  curl-websocket-utils.c  curl-websocket-utils.rs  curl-websocket.c  curl-websocket.h  error.h  index.html  io_poller.c  io_poller.h  jsmn-find.c  jsmn-find.h  jsmn-find.rs  json-build.c  json-build.h  log.h  log.rs  logconf.c  logconf.h  logconf.rs  logmod.c  logmod.h  (+22 more)
discord/: constants.html  index.html
docs/: .gitignore  BUILDING_A_BOT.md  BUILDING_WITH_WINDOWS.md  CODING_GUIDELINES.md  COMMIT_GUIDELINES.md  COMMIT_GUIDLINES.md  CONTRIBUTING.md  DISCORD_ROADMAP.md  INDEX.md  INTERNALS.md  MSYS2_MINGW64.md  PORTABILITY.md  PROJECT_OUTLINE.md  README.md  ROADMAP.md  SAIPHC.md  WINDOWS.md  doxygen-config  header.html
examples/: .gitignore  8ball.c  Makefile  audit-log.c  ban.c  bot-audit-log.c  bot-ban.c  bot-channel.c  bot-components.c  bot-delete-messages.c  bot-echo.c  bot-elitebgs.c  bot-embed.c  bot-emoji.c  bot-fetch-invites.c  bot-fetch-messages.c  bot-github-create-fork.c  bot-github-get-gist.c  bot-github-gist-starred.c  bot-github-gist.c  bot-guild-template.c  bot-guild.c  bot-invite.c  bot-manual-dm.c  bot-pin.c  bot-ping-pong.c  bot-presence.c  bot-presence.json  bot-quiz.c  bot-reaction.c  bot-reddit.c  bot-reddit.json  bot-shell.c  bot-slash-commands.c  bot-slash-commands2.c  bot-voice.c  bot-webhook.c  bot.config  cache.c  channel.c  (+23 more)
gencodecs/: .gitignore  Makefile  all.H  all.PRE.H  all.PRE.h  all.pre.h  discord-codecs.H  discord-codecs.c  discord-codecs.h  discord-codecs.pre.h  discord_codecs.PRE.H  discord_codecs.PRE.h  discord_codecs.pre.h  gencodecs-feeder.h  gencodecs-gen.h  gencodecs-pp.c  gencodecs-process.H  gencodecs-process.PRE.h  gencodecs-process.pre.h  gencodecs.h  voice_connections.H
include/: application_command.h  audit_log.h  auto_moderation.h  channel.h  concord-once.h  discord-cache.h  discord-events.h  discord-internal.h  discord-metadata.h  discord-request.h  discord-response.h  discord-templates.h  discord-voice-connections.h  discord-voice.h  discord-worker.h  discord.h  emoji.h  gateway.h  guild.h  guild_scheduled_event.h  guild_template.h  interaction.h  invite.h  libdiscord.h  oauth2.h  osname.h  stage_instance.h  sticker.h  user.h  voice.h  webhook.h
jsB/: jsB-discord-client.c  jsB-discord-client.cpp  jsB.h  jsB_SB.c
(+3858 files in other folders)
